# chad-pdf

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.trae/rules/: project_rules.md
client/: bun.lockb  index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1746083102490-daa46f719a9f7.mjs
client/.trae/rules/: project_rules.md
client/src/: app.tsx  global.css  main.tsx
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: content.tsx  header.tsx  independent.tsx  sidebar.tsx  temp.txt
client/src/components/ui/: animated-beam.tsx  (+2 more)
client/src/hooks/: use-conversation.ts  use-local-storage.ts  use-speech.ts
client/src/libs/: font-constant.ts  mock.ts  pdf-constant.ts  utils.ts
client/src/service/: api.ts
client/src/store/: conversation-slice.ts  store-provider.tsx  store.ts
server/: .gitignore  db_helper.py  pdf test.py  pdf_be.py  pdf_test.py  pyproject.toml  requirement.txt  text_processor.py  z.ipynb
server/app/: __init__.py
server/app/routes/: __init__.py  conversation_chat_routes.py  conversation_routes.py  pdf_routes.py  tts_routes.py  vector_routes.py
server/app/utils/: embeddings.py  llm_api.py  mock.py  pdf_preprocess.py  response.py
server/test/: db_helper.py  gemini.py  groq.py  pdf_be.py  pdf_test.py  speech_helper.py  test.py  test_text_splitter.py  test_text_splitter_2.py  text_processor.py
server/utils/: PDFHelper.py
src/: app.tsx  global.css  main.tsx
src/components/layout/: document-graph.tsx  left-tab.tsx
src/libs/: font-constant.ts
(+21 files in other folders)
